@@ -1,24 +1,28 @@
 package com.emmanuelgabe.portfolio.service.impl;
 
+import com.emmanuelgabe.portfolio.audit.AuditAction;
+import com.emmanuelgabe.portfolio.audit.Auditable;
 import com.emmanuelgabe.portfolio.dto.CreateSkillRequest;
 import com.emmanuelgabe.portfolio.dto.SkillResponse;
 import com.emmanuelgabe.portfolio.dto.UpdateSkillRequest;
 import com.emmanuelgabe.portfolio.entity.IconType;
 import com.emmanuelgabe.portfolio.entity.Skill;
 import com.emmanuelgabe.portfolio.entity.SkillCategory;
-import com.emmanuelgabe.portfolio.exception.ResourceNotFoundException;
 import com.emmanuelgabe.portfolio.mapper.SkillMapper;
+
+import static com.emmanuelgabe.portfolio.util.EntityHelper.findOrThrow;
 import com.emmanuelgabe.portfolio.repository.SkillRepository;
 import com.emmanuelgabe.portfolio.service.SkillService;
 import com.emmanuelgabe.portfolio.service.SvgStorageService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of SkillService interface
@@ -35,6 +39,7 @@ public class SkillServiceImpl implements SkillService {
     private final SvgStorageService svgStorageService;
 
     @Override
+    @Cacheable(value = "skills", key = "'all'")
     @Transactional(readOnly = true)
     public List<SkillResponse> getAllSkills() {
         log.debug("[LIST_SKILLS] Fetching all skills");
@@ -42,22 +47,22 @@ public class SkillServiceImpl implements SkillService {
         log.debug("[LIST_SKILLS] Found {} skills", skills.size());
         return skills.stream()
                 .map(skillMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Cacheable(value = "skills", key = "#id")
     @Transactional(readOnly = true)
     public SkillResponse getSkillById(Long id) {
         log.debug("[GET_SKILL] Fetching skill - id={}", id);
-        Skill skill = skillRepository.findById(id)
-                .orElseThrow(() -> {
-                    log.warn("[GET_SKILL] Skill not found - id={}", id);
-                    return new ResourceNotFoundException("Skill", "id", id);
-                });
+        Skill skill = findOrThrow(skillRepository.findById(id), "Skill", "id", id);
         return skillMapper.toResponse(skill);
     }
 
     @Override
+    @CacheEvict(value = "skills", allEntries = true)
+    @Auditable(action = AuditAction.CREATE, entityType = "Skill",
+            entityIdExpression = "#result.id", entityNameExpression = "#result.name")
     public SkillResponse createSkill(CreateSkillRequest request) {
         log.debug("[CREATE_SKILL] Creating skill - name={}, category={}", request.getName(), request.getCategory());
 
@@ -70,16 +75,13 @@ public class SkillServiceImpl implements SkillService {
     }
 
     @Override
+    @CacheEvict(value = "skills", allEntries = true)
+    @Auditable(action = AuditAction.UPDATE, entityType = "Skill",
+            entityIdExpression = "#id", entityNameExpression = "#result.name")
     public SkillResponse updateSkill(Long id, UpdateSkillRequest request) {
         log.debug("[UPDATE_SKILL] Updating skill - id={}", id);
 
-        Skill skill = skillRepository.findById(id)
-                .orElseThrow(() -> {
-                    log.warn("[UPDATE_SKILL] Skill not found - id={}", id);
-                    return new ResourceNotFoundException("Skill", "id", id);
-                });
-
-        // Update only provided fields using MapStruct
+        Skill skill = findOrThrow(skillRepository.findById(id), "Skill", "id", id);
         skillMapper.updateEntityFromRequest(request, skill);
 
         Skill updatedSkill = skillRepository.save(skill);
@@ -88,14 +90,12 @@ public class SkillServiceImpl implements SkillService {
     }
 
     @Override
+    @CacheEvict(value = "skills", allEntries = true)
+    @Auditable(action = AuditAction.DELETE, entityType = "Skill", entityIdExpression = "#id")
     public void deleteSkill(Long id) {
         log.debug("[DELETE_SKILL] Deleting skill - id={}", id);
 
-        Skill skill = skillRepository.findById(id)
-                .orElseThrow(() -> {
-                    log.warn("[DELETE_SKILL] Skill not found - id={}", id);
-                    return new ResourceNotFoundException("Skill", "id", id);
-                });
+        Skill skill = findOrThrow(skillRepository.findById(id), "Skill", "id", id);
 
         // Delete associated SVG icon if exists
         if (skill.getIconType() == IconType.CUSTOM_SVG && skill.getCustomIconUrl() != null) {
@@ -114,14 +114,11 @@ public class SkillServiceImpl implements SkillService {
      * @return Updated skill response
      */
     @Override
+    @CacheEvict(value = "skills", allEntries = true)
     public SkillResponse uploadSkillIcon(Long id, MultipartFile file) {
         log.debug("[UPLOAD_SKILL_ICON] Uploading icon - skillId={}", id);
 
-        Skill skill = skillRepository.findById(id)
-                .orElseThrow(() -> {
-                    log.warn("[UPLOAD_SKILL_ICON] Skill not found - id={}", id);
-                    return new ResourceNotFoundException("Skill", "id", id);
-                });
+        Skill skill = findOrThrow(skillRepository.findById(id), "Skill", "id", id);
 
         // Upload SVG and get URL
         String iconUrl = svgStorageService.uploadSkillIcon(id, file);
@@ -137,6 +134,7 @@ public class SkillServiceImpl implements SkillService {
     }
 
     @Override
+    @Cacheable(value = "skills", key = "'category:' + #category.name()")
     @Transactional(readOnly = true)
     public List<SkillResponse> getSkillsByCategory(SkillCategory category) {
         log.debug("[LIST_SKILLS_CATEGORY] Fetching skills by category - category={}", category);
@@ -144,6 +142,6 @@ public class SkillServiceImpl implements SkillService {
         log.debug("[LIST_SKILLS_CATEGORY] Found {} skills", skills.size());
         return skills.stream()
                 .map(skillMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
